# NVision

./: ..gitignore.un~  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  FINAL_ARCHITECTURE.md  MIGRATION_COMPLETE.md  Makefile  NATIVE_INTEGRATION.md  README.md  REFACTOR_SUMMARY.md  check_plot5.py  debug_cli.py  debug_runner.py  dummy_plan16.md  fix_ci_issues_import.py  fix_docker5.py  fix_future.py  fix_fw.py  fix_import_tests.py  fix_imports.py  fix_ruff.py  fix_seq.py  fix_seq2.py  fix_seq3.py  fix_tests.py  full_log.txt  inspect_locator.py  junit-result.xml  log.txt  modify_metrics.py  output.txt  patch_all_bayesian.py  patch_executor.py  patch_gs.py  patch_gs2.py  patch_gs3.py  (+33 more)
.agent/rules/: no-uv-run-all.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml  format.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  run-worker-gcp.yml  static.yml
.jules/: bolt.md  diff.txt  palette.md
articles/: NU10281_Dushenko_Supplemental_Material_10_14_2020.md  Project Book Submission.md  Sequential Bayesian Experiment Design for Optically Detected Magnetic  Resonance of Nitrogen-Vacancy Centers.md
artifacts/: app.js  combined_results.csv  experiment_results.csv  index.html  locator_results.csv  manifest.js  plots_manifest.json  settings.js  styles.css
artifacts/cache/: .gitkeep  cache.db  complementary.db  nv_center_index.db
artifacts/cli_pretty_test/: index.html
artifacts/cli_test/: index.html
artifacts/cli_test2/: index.html  locator_results.csv
artifacts/cli_test3/: index.html
artifacts/debug_run/: index.html  locator_results.csv  plots_manifest.json
artifacts/graphs/: .gitkeep  locator_summary_double_TwoPeak_pair_rmse.html  locator_summary_double_TwoPeak_uncert_sep.html  locator_summary_single_OnePeak-cauchy_abs_err_x.html  locator_summary_single_OnePeak-cauchy_uncert.html  locator_summary_single_OnePeak-gaussian_abs_err_x.html  locator_summary_single_OnePeak-gaussian_uncert.html  locator_summary_single_OnePeak-nv_center_abs_err_x.html  locator_summary_single_OnePeak-nv_center_uncert.html  locator_summary_single_OnePeak-t1_decay_abs_err_x.html  locator_summary_single_OnePeak-t1_decay_uncert.html
artifacts/scans/: nvcenter-one-peak-gauss-0-05-nvcenter-projectbayesian_rep0.html  nvcenter-one-peak-gauss-0-05-nvcenter-sequentialbayesian_rep0.html  nvcenter-one-peak-gauss-0-05-nvcenter-simplesequential_rep0.html  nvcenter-one-peak-gauss-0-05-nvcenter-simplesequential_rep1.html  nvcenter-one-peak-gauss-0-05-nvcenter-simplesequential_rep2.html  nvcenter-one-peak-gauss-0-05-nvcenter-simplesequential_rep3.html  nvcenter-one-peak-gauss-0-05-nvcenter-sweep_rep0.html  nvcenter-one-peak-gauss-0-05-nvcenter-sweep_rep1.html  nvcenter-one-peak-gauss-0-05-nvcenter-sweep_rep2.html  nvcenter-one-peak-gauss-0-05-nvcenter-sweep_rep3.html  nvcenter-one-peak-heavy-nvcenter-projectbayesian_rep0.html  nvcenter-one-peak-heavy-nvcenter-sequentialbayesian_rep0.html  nvcenter-one-peak-heavy-nvcenter-simplesequential_rep0.html  nvcenter-one-peak-heavy-nvcenter-simplesequential_rep1.html  nvcenter-one-peak-heavy-nvcenter-simplesequential_rep2.html  nvcenter-one-peak-heavy-nvcenter-simplesequential_rep3.html  nvcenter-one-peak-heavy-nvcenter-sweep_rep0.html  nvcenter-one-peak-heavy-nvcenter-sweep_rep1.html  nvcenter-one-peak-heavy-nvcenter-sweep_rep2.html  nvcenter-one-peak-heavy-nvcenter-sweep_rep3.html  nvcenter-one-peak-nonoise-nvcenter-projectbayesian_rep0.html  nvcenter-one-peak-nonoise-nvcenter-sequentialbayesian_rep0.html  nvcenter-one-peak-nonoise-nvcenter-simplesequential_rep0.html  nvcenter-one-peak-nonoise-nvcenter-simplesequential_rep1.html  nvcenter-one-peak-nonoise-nvcenter-simplesequential_rep2.html  nvcenter-one-peak-nonoise-nvcenter-simplesequential_rep3.html  nvcenter-one-peak-nonoise-nvcenter-sweep_rep0.html  nvcenter-one-peak-nonoise-nvcenter-sweep_rep1.html  nvcenter-one-peak-nonoise-nvcenter-sweep_rep2.html  nvcenter-one-peak-nonoise-nvcenter-sweep_rep3.html  nvcenter-one-peak-overprobedrift-0-001-nvcenter-projectbayesian_rep0.html  nvcenter-one-peak-overprobedrift-0-001-nvcenter-sequentialbayesian_rep0.html  nvcenter-one-peak-overprobedrift-0-001-nvcenter-simplesequential_rep0.html  nvcenter-one-peak-overprobedrift-0-001-nvcenter-simplesequential_rep1.html  (+526 more)
artifacts_test/: index.html  plots_manifest.json
docker/serve/: Dockerfile
docs/: classmethod_pattern.md  cli_integration.md  conf.py  core_architecture.md  dip_depth_reparametrization.md  index.md  sequential_bayesian_locator.md
examples/: core_architecture_demo.py  native_integration_demo.py  sequential_bayesian_example.py
nvision/: __init__.py  __main__.py
scratch/: benchmark_sbed.py  check_narrow.py  check_narrow_voigt.py
scripts/: debug_import.py  test_peak_metrics.py  validate_html_simple.py  verify_animation.py  verify_cache_graph.py  verify_project_locator.py  verify_stopping_condition.py
static/: app.js  index.html  styles.css
tests/: diagnose_amplitude.py  diagnose_output.txt  locator_compat.py  repro_bayesian_cache.py  reproduce_amplitude_bug.py  test_analytical_locator.py  test_batched_bayesian_locator.py  test_cache.py  test_cache_repeats.py  test_combination_grid.py  test_convert.py  test_elastic_repeats.py  test_executor_cache_max_steps.py  test_executor_rng.py  test_fisher_information.py  test_focus_window.py  test_gaussian_laplace_locators.py  test_generators.py  test_hybrid_noise.py  test_integration.py  test_jit.py  test_likelihood_models.py  test_locator_benchmarks.py  test_locators.py  test_mathutils.py  test_metrics.py  test_metrics_edge_cases.py  test_new_locators.py  test_noise_properties.py  test_observation.py  test_over_probe_noise.py  test_project_bayesian_locator.py  test_refocus.py  test_render_cache_key.py  test_runner_cache.py  test_scan_plot_data.py  test_scangen.py  test_sequential_bayesian_locator.py  test_signal_normalization.py  test_simulation.py  (+6 more)
verification_output/: index.html  locator_results.csv  plots_manifest.json
(+1041 files in other folders)
