[project]
name = "nvision"
version = "0.1.0"
description = "NVision: project scaffold with tests, ruff, CI, and fuzzing"
requires-python = ">=3.12,<3.14"
dependencies = [
    "bayesian-optimization>=1.5.0",
    "polars>=1.35.1",
    "typer>=0.12.0",
    "matplotlib>=3.7",
    "diskcache>=5.6",
    "scipy>=1.16.3",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "plotly>=6.4.0",
    "pytest-cov>=7.0.0",
    "scipy-stubs==1.16.3.0",
    "rich>=13.0",
    "numba>=0.62.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "hypothesis>=6.147.0",
    "ruff==0.14.4",
    "pre-commit==4.3.0",
]

[project.scripts]
nvision = "nvision.__main__:main"

[tool.ruff]
line-length = 120
src = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".mypy_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C90", # mccabe
    "DTZ", # flake8-datetimez
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "RUF", # Ruff rules
]
ignore = [
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=nvision --cov-report=xml --cov-report=term-missing --cov-report=html --timeout=60"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "error::DeprecationWarning",
    "ignore:.*is_in.*collection.*ambiguous:DeprecationWarning",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "hypothesis>=6.147.0",
    "pre-commit==4.3.0",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3.1",
    "ruff==0.14.4",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
