[project]
name = "nvision"
version = "0.1.0"
description = "NVision: project scaffold with tests, ruff, CI, and fuzzing"
requires-python = ">=3.13,<3.14"
dependencies = [
    "bayesian-optimization>=1.5.0",
    "polars>=1.35.1",
    "typer>=0.12.1",
    "matplotlib>=3.10.9",
    "scipy>=1.17.1",
    "plotly>=6.4.0",
    "rich>=13.0",
    "numba>=0.65.1",
    "tzdata>=2026.2",
]

[project.optional-dependencies]
dev = [
    "scipy>=1.17.1",
    "pytest-cov>=7.0.0",
    "pytest>=8.0",
    "hypothesis>=6.147.0",
    "ruff==0.14.4",
    "pre-commit==4.3.0",
]

[project.scripts]
nvision = "nvision.__main__:main"

[tool.ruff]
line-length = 120
src = [".", "tests"]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".mypy_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C90", # mccabe
    "DTZ", # flake8-datetimez
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "RUF", # Ruff rules
]
ignore = [
    "RUF001", # ambiguous unicode in strings
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=nvision --cov-report=xml --cov-report=term-missing --cov-report=html --timeout=60"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "error::DeprecationWarning",
    "ignore:.*is_in.*collection.*ambiguous:DeprecationWarning",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nvision*"]
exclude = ["tests*", "scripts*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "hypothesis>=6.147.0",
    "pre-commit==4.3.0",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3.1",
    "ruff==0.14.4",
    "intel-cmplr-lib-rt>=2025.3.2",
    "scipy-stubs>=1.16.3.0",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
