[project]
name = "nvision"
version = "0.1.0"
description = "NVision: project scaffold with tests, ruff, CI, and fuzzing"
requires-python = ">=3.13,<3.14"
dependencies = [
    "bayesian-optimization>=1.5.0",
    "jax[cpu]>=0.4.35",
    "polars>=1.35.1",
    "typer>=0.12.1",
    "matplotlib>=3.10.9",
    "scipy>=1.17.1",
    "plotly>=6.4.0",
    "rich>=13.0",
    "numba>=0.65.1",
    "tzdata>=2026.2",
    "python-dotenv>=1.0.0",
    "google-cloud-storage>=3.10.1",
    "numdifftools>=0.9.41",
]

[project.optional-dependencies]
dev = [
    "scipy>=1.17.1",
    "pytest-cov>=7.0.0",
    "pytest>=8.0",
    "hypothesis>=6.147.0",
    "ruff==0.14.4",
    "pre-commit==4.3.0",
]

[project.scripts]
nvision = "nvision.__main__:main"
nv = "nvision.__main__:main"

[tool.ruff]
line-length = 120
src = [".", "tests"]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".mypy_cache",
    "build",
    "dist",
    "README.md",
    "scratch"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C90", # mccabe
    "DTZ", # flake8-datetimez
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "RUF", # Ruff rules
]
ignore = [
    "RUF001", # ambiguous unicode in strings
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
    "N802",    # allow camelCase / mixedCase function names matching project convention
    "PT009",   # allow use of unittest.mock.patch in tests (project prefers explicit mocks)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=nvision --cov-report=xml --cov-report=term-missing --cov-report=html --timeout=60"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests that use pytest-benchmark",
]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "error::DeprecationWarning",
    "ignore:.*is_in.*collection.*ambiguous:DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.147.0",
    "pre-commit==4.3.0",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3.1",
    "ruff==0.14.4",
    "intel-cmplr-lib-rt>=2025.3.2",
    "scipy-stubs>=1.16.3.0",
    "pytest-benchmark>=5.2.3",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
